--- a/WoowahanFresh/WoowahanFresh/View + Controller/3-1 Content - 홈/Cell/InfiniteScrollViewCell.xib
+++ b/WoowahanFresh/WoowahanFresh/View + Controller/3-1 Content - 홈/Cell/InfiniteScrollViewCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="InfiniteScrollViewCell" selectionStyle="default" indentationWidth="10" rowHeight="280" id="KGk-i7-Jjw" customClass="InfiniteScrollViewCell" customModule="WoowahanFresh" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="InfiniteScrollViewCell" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="InfiniteScrollViewCell" customModule="WoowahanFresh" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="354"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -20,7 +20,7 @@
                 <autoresizingMask key="autoresizingMask"/>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="182.40000000000001" y="207.26600985221677"/>
+            <point key="canvasLocation" x="181.59999999999999" y="206.89655172413794"/>
         </tableViewCell>
     </objects>
 </document>
